--- a/package.json
+++ b/package.json
@@ -57,8 +57,10 @@
     "clsx": "2.1.1",
     "framer-motion": "11.15.0",
     "iconsax-react": "^0.0.8",
+    "oidc-client-ts": "^3.2.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-oidc-context": "^3.3.0",
     "react-router-dom": "^6.23.0",
     "recharts": "^2.15.1",
     "tailwind-variants": "0.1.20",
